# dados_aula_09

./: README.md  exemplo_00.py  logging_exemplo_erros.py  main_logs.py  pyproject.toml  requirements.txt  sentry_exemplo.py
