[tool.poetry]
name = "aula-09"
version = "0.1.0"
description = ""
authors = ["FernandoMS4 <fernando381046@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
sentry-sdk = "^2.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
